# dafi

./: .gitignore  11.py  222.py  404.html  CHANGELOG.rst  LICENSE.txt  Makefile  README.md  app_test.py  build.zig  builder.py  client_threads.py  connect_client_test.py  download_zig.py  index.html  mkdocs.yml  objects.inv  old_example.zig  pyproject.toml  requirements.txt  setup.py  simp_test.py  sitemap.xml  testgil_asyncio.py  testgil_threads.py  trace.txt
.github/workflows/: publish_docs.yml  release.yml  test_and_validate.yml  test_and_validate_staging.yml
async-apps/: index.html
base-objects/: index.html
basic-example/: index.html
broadcasting/: index.html
callback-classes/: index.html
callback-decorator/: index.html
code-reference/callback/: index.html
code-reference/fetcher/: index.html
code-reference/global/: index.html
core/: Client.zig  Server.zig  cffi.zig  core.zig  handlers.zig  misc.zig  network.zig  repository.zig  serde.zig  test.zig  wasm.zig
core/cffi/: client.zig  server.zig
core/handlers/: handlers.zig  message_handler.zig
core/network/: ClientConnection.zig  ServerConnection.zig  WasmConnection.zig  WebConnection.zig  connection.zig
core/network/web/: buffer.zig  framing.zig  handshake.zig  reader.zig
core/repository/: ChannelsMapper.zig  ClientMessageStore.zig  TasksQueue.zig
core/serde/: FromRawMessageIterator.zig  ToRawMessageIterator.zig  handshake.zig  message.zig  message_pool.zig  slices.zig
daffi/: __about__.py  __init__.py  app.py  async_result.py  callback_types.py  core.py  decorators.py  exceptions.py  execution_modifiers.py  globals.py  interface.py  ipc.py  method_executors.py  misc.py  remote_call.py  rpc_proxy.py  serialization.py  settings.py  signals.py  store.py  task_dispatcher.py  well_known_callbacks.py
daffi/components/: __init__.py  controller.py  node.py  scheduler.py
daffi/components/operations/: channel_store.py  streams_store.py  (+5 more)
daffi/decorators/: __init__.py  _alias.py  _base.py  _callback.py  _fetcher.py  _local.py  callback.py  fetcher.py
daffi/registry/: __init__.py  _base.py  _callback.py  _fetcher.py  callback.py  executor.py  fetcher.py
daffi/utils/: colors.py  custom_types.py  debug.py  func_validation.py  logger.py  misc.py  settings.py
dafi/: __about__.py  __init__.py  async_result.py  backend.py  callback_types.py  exceptions.py  globals.py  interface.py  ipc.py  message.py  messaging.py  remote_call.py  signals.py  utils.py
dafi/components/: __init__.py  controller.py  node.py  scheduler.py  unix.py
dafi/utils/: colors.py  custom_types.py  debug.py  func_validation.py  logger.py  mappings.py  misc.py  retry.py  settings.py  timeparse.py
df_test/: callback.py  client_methods.py  client_without_methods.py  router.py  service.py
dfcoire.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dfcore.egg-info/: PKG-INFO  SOURCES.txt
docker/: Dockerfile  main.py
docs/: all-connections-is-stream.md  another-examples.md  async-apps.md  base-objects.md  basic-example.md  broadcasting.md  callback-classes.md  callback-decorator.md  daffi-objects.md  example-bidirectional-com.md  execution-modifiers.md  fetcher-decorator.md  full-example.md  g-object-injection.md  getting-started.md  global-object.md  index.md  installation.md  main-concepts-and-architecture.md  node-and-controller.md  pipeline.md  requirements.txt  scheduling-tasks.md  stream.md
docs/code-reference/: callback.md  fetcher.md  global.md
docs/images/: .$many-controllers.drawio.dtmp  broadcasting.drawio  controller-plus-node-arch.drawio  one-to-one.drawio
docs/js/: extra.js
docs/stylesheets/: extra.css
docs/usage/: aliased-methods.md  asynchronous-execution.md  basic-example.md  bidirectional-communication.md  broadcasting.md  callback-additional-arguments.md  fetchers-with-body.md  function-transfer.md  lifecycle-events.md  named-processes.md  private-methods.md  scheduling-tasks.md  ssl-certificates.md  stream-callback-to-fetcher.md  stream-fetcher-to-callback.md
example-bidirectional-com/: index.html
examples/certs/: cert.pem  domains.ext  generate_certs.sh  key.pem  root_ca.pem  root_key.pem  sign.csr
examples/docker/: docker-compose.yml
examples/opencv_stream/: consumer.py  publisher1.py  publisher2.py  publisher3.py
execution-modifiers/: index.html
fetcher-decorator/: index.html
g-object-injection/: index.html
global-object/: index.html
images/: many-controllers.drawio  one-to-one-reverse.drawio  pipeline.drawio  stand-alone-controller-arch.drawio
installation/: index.html
js/: extra.js
js-client/: app.js  app.zig  build.zig  daffi.js
js-client/test/: index.html  io.html  pure_socket.html
node-and-controller/: index.html
pipeline/: index.html
scheduling-tasks/: index.html
scripts/: generate_coverage_summary.py  write_coverage_summary_report.py
search/: search_index.json
stream/: index.html
stylesheets/: extra.css
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  test_broadcast.py  test_many_callbacks.py  test_many_nodes.py  test_period.py  test_pipeline.py  test_stream.py  test_stream_callback_to_fetcher.py  test_stream_fetcher_to_callback.py  test_trio.py
tests/unit/: test_async_result.py  test_callback.py  test_callback_and_fecher_classes.py  test_callback_decorator.py  test_fetcher_decorator.py  test_freezable_queue.py  test_function_validation.py  test_logger.py  test_misc.py  test_multi_inheritence_prohibited.py
usage/aliased-methods/: index.html
usage/asynchronous-execution/: index.html
usage/basic-example/: index.html
usage/bidirectional-communication/: index.html
usage/broadcasting/: index.html
usage/callback-additional-arguments/: index.html
usage/fetchers-with-body/: index.html
usage/function-transfer/: index.html
usage/lifecycle-events/: index.html
usage/named-processes/: index.html
usage/private-methods/: index.html
usage/scheduling-tasks/: index.html
usage/ssl-certificates/: index.html
usage/stream-callback-to-fetcher/: index.html
usage/stream-fetcher-to-callback/: index.html
zig-out/lib/: app.wasm
(+219 files in other folders)
